--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,46 +1,60 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-        <title>{{ page.title }}</title>
-        <meta name="viewport" content="width=device-width">
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-        <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+  <title>Schwartzography</title>
 
-        <!-- Custom CSS -->
-        <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/toast.css">
+  <link rel="stylesheet" href="css/main.css">
 
-    </head>
-    <body>
+  <!--[if lt IE 9]>
+    <link rel="stylesheet" type="text/css" href="styles/ie8-and-down.css" />
+  <![endif]-->
 
-        <div class="container">
-          <div class="site">
-            <div class="header">
-              <h1 class="title"><a href="/">{{ site.name }}</a></h1>
-              <a class="extra" href="/">home</a>
-            </div>
-     
-                {{ content }}
+  <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans:300italic,600italic,300,600' rel='stylesheet' type='text/css'>
 
-            <div class="footer">
-              <div class="contact">
-                <p>
-                  Your Name<br />
-                  What You Are<br />
-                  your@email.com
-                </p>
-              </div>
-              <div class="contact">
-                <p>
-                  <a href="http://github.com/yourusername/">github.com/yourusername</a><br />
-                  <a href="http://twitter.com/yourusername/">twitter.com/yourusername</a><br />
-                </p>
-              </div>
-            </div>
-          </div>
-        </div> <!-- /container -->
 
-    </body>
+  <!--[if lt IE 9]>
+    <script src="js/html5shiv.js"></script>
+  <![endif]-->
+
+</head>
+<body class="group">
+
+  {% include _header.html %}
+  {% include _carousel.html %}
+
+  <section class="main-page container">
+    <div class="grid">
+      <div class="three-of-four unit">
+
+        {{ content }}
+
+        <ol class="pagination group">
+          <li><a href="#">&#171;</a></li>
+          <li><a href="#">1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">4</a></li>
+          <li><a href="#">5</a></li>
+          <li><a href="#">&#187;</a></li>
+        </ol>
+
+      </div>
+
+      <div class="one-of-four unit">
+        {% include _sidebar.html %}
+      </div>
+    </div>
+  </section>
+
+  <footer class="group">
+    <p class="container"><small>&copy; Copyright 2011-2013 Smith and Erik Schwartz</small></p>
+
+  </footer>
+
+</body>
 </html>
