--- a/css/main.css
+++ b/css/main.css
@@ -1,165 +1,441 @@
-/*****************************************************************************/
-/*
-/* Common
-/*
-/*****************************************************************************/
+/*Reset styles*/
 
-/* Global Reset */
-* {
-  margin: 0;
-  padding: 0;
-}
-
-html, body { height: 100%; }
+/* apply a natural box layout model to all elements */
+* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
 body {
-  background-color: #FFF;
-  font: 13.34px Helvetica, Arial, sans-serif;
-  font-size: small;
-  text-align: center;
+	color: #333;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-size: 100%; }
-
-h1 { margin-bottom: 1em; }
-p { margin: 1em 0; }
-
-a         { color: #00a; }
-a:hover   { color: #000; }
-a:visited { color: #a0a; }
-
-table {
-  font-size: inherit;
-  font: 100%;
+.group:after {
+  content: "";
+  display: table;
+  clear: both;
 }
 
-/*****************************************************************************/
-/*
-/* Home
-/*
-/*****************************************************************************/
-ul.posts {
-  list-style-type: none;
-  margin-bottom: 2em;
+
+li {
+	list-style: none;
 }
 
-ul.posts li {
-  line-height: 1.75em;
+a {
+	color: #333;
+	font-weight: 600;
+	text-decoration: none;
 }
 
-ul.posts span {
-  color: #aaa;
-  font-family: Monaco, "Courier New", monospace;
-  font-size: 80%;
+a:hover {
+	color: black;
+	text-decoration: underline;
 }
 
-/*****************************************************************************/
-/*
-/* Site
-/*
-/*****************************************************************************/
-
-.site {
-  font-size: 115%;
-  text-align: justify;
-  width: 42em;
-  margin: 3em auto 2em;
-  line-height: 1.5em;
+.pagination a {
+	color: #aaa;
 }
 
-.site .header a {
-  font-weight: bold;
-  text-decoration: none;
+.pagination a:hover {
+	color: black;
 }
 
-.site .header h1.title {
-  display: inline-block;
-  margin-bottom: 2em;
+img {
+	border: 1px solid #ccc;
 }
 
-.site .header h1.title a {
-  color: #a00;
+/*Font*/
+
+html {
+	font: 125%/1.5 'Open Sans', Helvetica, Arial, sans-serif;
 }
 
-.site .header h1.title a:hover {
-  color: #000;
+
+h1, 
+h2 {
+	font-family: 'Lobster', cursive;
 }
 
-.site .header a.extra {
-  color: #aaa;
-  margin-left: 1em;
+.banner h2,
+.single-page h2 {
+	font-family: 'Open Sans', Helvetica, Arial, sans-serif;
 }
 
-.site .header a.extra:hover {
-  color: #000;
+h5, .home-nav {
+	font-size: .7em;
+	font-weight: bold;
+	line-height: 1.4em;
 }
 
-.site .meta {
-  color: #aaa;
+.date,
+small {
+	font-size: .8em;
 }
 
-.site .footer {
-  font-size: 80%;
-  color: #666;
-  border-top: 4px solid #eee;
-  margin-top: 2em;
-  overflow: hidden;
+/*Header*/
+
+.logo {
+	margin-bottom: 0;
 }
 
-.site .footer .contact {
-  float: left;
-  margin-right: 3em;
+header.container {
+	margin-top: 0;
+}
+/*Layout*/
+
+.banner {
+	background: rgba(0, 0, 0, .2);
+	height: 3.5em;
+	position: relative;
+	top: -90px;
+	width: 100%;
 }
 
-.site .footer .contact a {
-  color: #8085C1;
+.banner,
+.banner a {
+	color: white;
 }
 
-.site .footer .rss {
-  margin-top: 1.1em;
-  margin-right: -.2em;
-  float: right;
+.post-title {
+	padding-left: 1em;
 }
 
-.site .footer .rss img {
-  border: 0;
+.post-categories,
+.post-categories a {
+	font-weight: 300;
 }
 
-/*****************************************************************************/
-/*
-/* Posts
-/*
-/*****************************************************************************/
 
-/* standard */
-#post pre {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .4em;
+.banner h5 {
+	padding-left: 1em;
+}
+.carousel {
+	max-height: 28em;
+	padding-bottom: 40px;
+
 }
 
-#post ul, #post ol {
-  margin-left: 1.35em;
+.blog-link,
+.time {
+	font-size: 60%;
 }
 
-#post code {
-  border: 1px solid #ddd;
-  background-color: #eef;
-  padding: 0 .2em;
+.time {
+	border-bottom: 1px solid #ccc;
+	border-top: 1px solid #ccc;
+	margin: .2em 0;
+	padding: .3em;
 }
 
-#post pre code {
-  border: none;
+.thumbnail h2 {
+	margin-bottom: .5em;
 }
 
-/* terminal */
-#post pre.terminal {
-  border: 1px solid #000;
-  background-color: #333;
-  color: #FFF;
+.thumbnail {
+	margin-bottom: 40px;
 }
 
-#post pre.terminal code {
-  background-color: #333;
+.pagination{
+	margin: 0 auto 40px auto;
+	width: 30%;
 }
+
+.pagination li{
+	display: block;
+	float: left;
+	margin-right: 9%;
+}
+
+
+input {
+	border: 1px solid #aaa;
+	display: block;
+	font-size: 80%;
+	float: left;
+	margin: 0;
+	height: 30px;
+	line-height: 30px;
+	padding: 0;
+	vertical-align: baseline;
+}
+
+.text-input {
+	margin-right: 5%;
+	width: 64%;
+}
+
+.text-input:focus {
+	outline: 0;
+	-moz-box-shadow:    inset 0 0 5px #aaa;
+	-webkit-box-shadow: inset 0 0 5px #aaa;
+	box-shadow:         inset 0 0 5px #aaa;
+}
+
+.search-btn {
+	background: rgba(0, 0, 0, .2);
+	height: 32px;
+	width: 30%;
+}
+
+.search-btn:hover {
+	 background: rgba(0, 0, 0, .5);
+	 color: #eee;
+}
+
+.locations ol {
+	font-size: 95%;
+	margin: 5px 0;
+}
+
+li.continent {
+	margin-bottom: 1.5em;
+}
+
+li.country {
+	margin-left: 5%;
+}
+
+li.state {
+	margin-left: 10%;
+}
+
+li.city {
+	margin-left: 10%;
+}
+
+.locations a {
+	font-weight: 300;
+}
+
+.index-locations {
+	margin-top: 4em;
+}
+
+.three-of-four {
+	border-right: 1px dashed #ddd;
+	padding-right: 40px;
+}
+
+.nav-locations {
+	display: none;
+}
+
+/*Single Post Layout */
+
+.single-post .post-title {
+	display: none;
+}
+
+.single-post .post-categories {
+	line-height: 4.5em;
+}
+
+.single-post h2 {
+	margin-top: 0;
+}
+
+/*Page Layout*/
+
+.not-current {
+	color: #aaa;
+}
+
+.single-page .banner {
+	top: 0px;
+}
+
+.single-page .banner h2 {
+	line-height: 2.2em;
+	margin: 0;
+	padding: 0;
+}
+
+/*Flight Path Layout*/
+
+.date {
+	margin-left: 5%;
+	margin-bottom: 1em;
+}
+
+/*Footer*/
+
+footer {
+	background: rgba(0, 0, 0, .2);
+	border-top: 1px solid #aaa;
+	padding: 20px 0 40px 0;
+}
+
+/*Media Queries*/
+
+@media screen and (max-width: 1160px) {
+
+	.main-page {
+		top: -30px;
+	}
+
+	.single-page .main-page {
+		top: -10px;
+	}
+
+}
+
+@media screen and (max-width: 1100px) {
+
+	.main-page {
+		top: -60px;
+	}
+
+	.pagination {
+		width: 50%;
+	}
+
+}
+
+@media screen and (max-width: 1050px) {
+
+	.main-page {
+		top: -80px;
+	}
+
+	.single-page .main-page {
+		top: -10px;
+	}
+
+}
+
+@media screen and (max-width: 805px) {
+
+
+	h1.logo {
+		font-size: 2.2rem;
+	}
+
+}
+
+@media screen and (max-width: 790px) {
+
+	.text-input {
+		width: 63%;
+	}
+
+	.pagination {
+		width: 60%;
+	}
+
+	.nav-grid {
+		padding-top: 4.6em;
+		width: 29%;
+	}
+
+	.nav-grid.end {
+		width: 32%;
+	}
+}
+
+@media screen and (max-width: 690px) {
+
+	.nav-grid {
+		background: white;
+		border-top: 1px dashed #ddd;
+		border-left: 1px dashed #ddd;
+		border-right: 1px dashed #ddd;
+		padding: 10px;
+		text-align: center;
+		text-transform: uppercase;
+		width: 100%;
+	}
+
+	.nav-grid.end {
+		width: 100%;
+	}
+
+	.even {
+		background: #eee;
+	}
+
+	.nav-grid:hover {
+		background: rgba(0, 0, 0, .2);
+	}
+
+	.nav-grid a:hover {
+		color: white;
+	}
+
+	.main-nav {
+		border-bottom: 1px dashed #ddd;
+		margin: 20px 0;
+	}
+
+	.nav-locations {
+		display: block;
+	}
+
+	.index-locations {
+		display: none;
+	}
+
+	header .three-of-five {
+		width: 100%;
+	}
+
+	.carousel {
+		display: none;
+	}
+
+	.main-page {
+		top: -10px;
+	}
+
+	.one-of-four {
+		margin-top: 30px;
+	}
+
+	.three-of-four {
+		border-right: none;
+		padding-right: 0;
+	}
+
+	.pagination {
+		margin-bottom: 20px;
+	}
+
+	.locations a {
+		font-weight: 300;
+	}
+	
+	small {
+		font-size: 70%;
+	}
+
+	.locations a {
+		font-weight: 300;
+	}
+
+	.three-of-four {
+		border-bottom: 1px dashed #ddd;
+
+
+
+}
+
+@media screen and (max-width: 550px) {
+
+
+	.pagination {
+		width: 70%;
+	}
+
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
