Add conditional styles/behavior for post layout

--- a/_includes/_carousel.html
+++ b/_includes/_carousel.html
@@ -5,13 +5,5 @@
     </div>
   </div>
 
-  <aside class="banner">
-    <div class="container">
-      <div class="grid">
-        <div class="post-title unit span-grid">
-          <h2>Wiki Wiki to Wisconsin
-        </div>
-      </div>
-    </div>
-  </aside>
+  {% include _carousel_banner.html %}
 </section>
