--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,28 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-
-  <title>Schwartzography</title>
-
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/toast.css">
-  <link rel="stylesheet" href="css/main.css">
-
-  <!--[if lt IE 9]>
-    <link rel="stylesheet" type="text/css" href="styles/ie8-and-down.css" />
-  <![endif]-->
-
-  <link href='http://fonts.googleapis.com/css?family=Lobster|Open+Sans:300italic,600italic,300,600' rel='stylesheet' type='text/css'>
-
-
-  <!--[if lt IE 9]>
-    <script src="js/html5shiv.js"></script>
-  <![endif]-->
-
-</head>
-<body class="group">
+{% include _head.html %}
+<body class="{{ page.body_css }} group">
 
   {% include _header.html %}
   {% include _carousel.html %}
@@ -30,9 +9,7 @@
   <section class="main-page container">
     <div class="grid">
       <div class="three-of-four unit">
-
         {{ content }}
-
         <ol class="pagination group">
           <li><a href="#">&#171;</a></li>
           <li><a href="#">1</a></li>
@@ -42,19 +19,14 @@
           <li><a href="#">5</a></li>
           <li><a href="#">&#187;</a></li>
         </ol>
-
       </div>
-
       <div class="one-of-four unit">
         {% include _sidebar.html %}
       </div>
     </div>
   </section>
-
   <footer class="group">
     <p class="container"><small>&copy; Copyright 2011-2013 Smith and Erik Schwartz</small></p>
-
   </footer>
-
 </body>
 </html>
