--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,15 +10,15 @@
     <div class="grid">
       <div class="three-of-four unit">
         {{ content }}
-        <ol class="pagination group">
-          <li><a href="#">&#171;</a></li>
-          <li><a href="#">1</a></li>
-          <li><a href="#">2</a></li>
-          <li><a href="#">3</a></li>
-          <li><a href="#">4</a></li>
-          <li><a href="#">5</a></li>
-          <li><a href="#">&#187;</a></li>
-        </ol>
+        <!-- <ol class="pagination group"> -->
+        <!--   <li><a href="#">&#171;</a></li> -->
+        <!--   <li><a href="#">1</a></li> -->
+        <!--   <li><a href="#">2</a></li> -->
+        <!--   <li><a href="#">3</a></li> -->
+        <!--   <li><a href="#">4</a></li> -->
+        <!--   <li><a href="#">5</a></li> -->
+        <!--   <li><a href="#">&#187;</a></li> -->
+        <!-- </ol> -->
       </div>
       <div class="one-of-four unit">
         {% include _sidebar.html %}
