--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,9 +3,9 @@ layout: default
 body_css: single-post
 single_post: true
 ---
-<!-- <h2>{{ page.title }}</h2> -->
-<!-- <p class="meta">{{ page.date | date_to_string }}</p> -->
-<!--  -->
-<!-- <div id="post"> -->
-<!-- {{ content }} -->
-<!-- </div> -->
+<h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
+  <p class="time">
+    By: {{ page.author }} |
+    <time datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
+  </p>
+{{ content }}
