--- a/_includes/_carousel_banner.html
+++ b/_includes/_carousel_banner.html
@@ -3,7 +3,10 @@
     <div class="grid">
       {% if page.single_post %}
         <h3 class="post-title unit span-grid">Wiki Wiki to Wisconsin</h3>
-        <h5 class="post-categories unit span-grid">Location: <a href="#">The Big Island</a>,  <a href="#">Hawaii</a>, <a href="#">USA</a></h5>
+        <h5 class="post-categories unit span-grid">Location:
+          <!--{{ page.categories | join: ', ' }}-->
+
+            <!--<a href="#">Foo</a>,  <a href="#">Hawaii</a>, <a href="#">USA</a></h5>-->
       {% else %}
         <div class="post-title unit span-grid">
           <h2>Wiki Wiki to Wisconsin</h2>
