--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,11 +1,27 @@
----
-layout: default
-body_css: single-post
-single_post: true
----
-<h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
-  <p class="time">
-    By: {{ page.author }} |
-    <time datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
-  </p>
-{{ content }}
+<!DOCTYPE html>
+<html lang="en">
+{% include _head.html %}
+<body class="single-post group">
+
+  {% include _header.html %}
+  {% include _post_carousel.html %}
+
+  <section class="main-page container">
+    <div class="grid">
+      <div class="three-of-four unit">
+        <h2><a href="{{ page.url }}">{{ page.title }}</a></h2>
+          <p class="time">
+            By: {{ page.author }} |
+            <time datetime="{{ page.date }}">{{ page.date | date_to_string }}</time>
+          </p>
+        {{ content }}
+      </div>
+      <div class="one-of-four unit">
+        {% include _sidebar.html %}
+      </div>
+    </div>
+  </section>
+
+  {% include _footer.html %}
+</body>
+</html>
