Set baseurl to github

--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -10,7 +10,7 @@
     {% endif %}
   </title>
 
-  <base href="{{ site.url }}">
+  <base href="{{ site.baseurl }}">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/toast.css">
   <link rel="stylesheet" href="css/main.css">
