--- a/_includes/_post_carousel.html
+++ b/_includes/_post_carousel.html
@@ -1,7 +1,8 @@
 <section class="carousel">
   <div class="container-img">
     <div class="grid-img">
-      <img class="unit-img span-grid" src="images/taking-the-plunge.jpg" alt="Divers in Hawaii">
+      <img class="unit-img span-grid" src="{{page.featured_img}}"
+        alt="{{page.featured_alt}}">
     </div>
   </div>
   <aside class="banner">
