--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -25,4 +25,7 @@
   <!--[if lt IE 9]>
     <script src="js/html5shiv.js"></script>
   <![endif]-->
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+  <script src="/js/responsiveslides.min.js"></script>
+  <script src="/js/main.js"></script>
 </head>
