Add category pages

--- a/_includes/_sidebar.html
+++ b/_includes/_sidebar.html
@@ -4,89 +4,89 @@
 <aside class="locations index-locations group">
   <h2>Locations</h2>
     <ol>
-      <li class="continent"><a href="#">Central America</a>
+      <li class="continent"><a href="/category/central-america/">Central America</a>
         <ol>
-          <li class="country"><a href="#">Costa Rica</a>
+          <li class="country"><a href="/category/costa-rica/">Costa Rica</a>
             <ol>
-              <li class="city"><a href="#">Playa Grande</a></li>
+              <li class="city"><a href="/category/playa-grande/">Playa Grande</a></li>
             </ol>
           </li>
-          <li class="country"><a href="#">Panama</a>
+          <li class="country"><a href="/category/panama/">Panama</a>
             <ol>
-              <li class="city"><a href="#">Panama City</a></li>
+              <li class="city"><a href="/category/panama-city/">Panama City</a></li>
             </ol>
           </li>
         </ol>
       </li>
-      <li class="continent"><a href="#">South America</a>
+      <li class="continent"><a href="/category/south-america/">South America</a>
         <ol>
-          <li class="country"><a href="#">Argentina</a>
+          <li class="country"><a href="/category/argentina/">Argentina</a>
             <ol>
-              <li class="city"><a href="#">Buenos Aires</a></li>
+              <li class="city"><a href="/category/buenos-aires/">Buenos Aires</a></li>
             </ol>
           </li>
 
-          <li class="country"><a href="#">Uruguay</a>
+          <li class="country"><a href="/category/uruguay/">Uruguay</a>
             <ol>
-              <li class="city"><a href="#">Colonia del Sacremento</a></li>
+              <li class="city"><a href="/category/colonia-del-sacramento">Colonia del Sacremento</a></li>
             </ol>
           </li>
         </ol>
       </li>
-      <li class="continent"><a href="#">North America</a>
+      <li class="continent"><a href="/category/north-america/">North America</a>
         <ol>
-          <li class="country"><a href="#">Canada</a>
+          <li class="country"><a href="/category/canada/">Canada</a>
             <ol>
-              <li class="state"><a href="#">Ontario</a>
+              <li class="state"><a href="/category/ontario/">Ontario</a>
                 <ol>
-                  <li class="city"><a href="#">Toronto</a></li>
+                  <li class="city"><a href="/category/toronto/">Toronto</a></li>
                 </ol>
               </li>
             </ol>
           </li>
-          <li class="country"><a href="#">USA</a>
+          <li class="country"><a href="/category/usa/">USA</a>
             <ol>
-              <li class="state"><a href="#">Hawaii</a>
+              <li class="state"><a href="/category/hawaii/">Hawaii</a>
                 <ol>
-                  <li class="city"><a href="#">Kauai</a></li>
-                  <li class="city"><a href="#">Oahu</a></li>
-                  <li class="city"><a href="#">The Big Island</a></li>
+                  <li class="city"><a href="/category/kauai/">Kauai</a></li>
+                  <li class="city"><a href="/category/oahu/">Oahu</a></li>
+                  <li class="city"><a href="/category/the-big-island/">The Big Island</a></li>
                 </ol>
               </li>
-              <li class="state"><a href="#">Illinois</a>
+              <li class="state"><a href="/category/illinois/">Illinois</a>
                 <ol>
-                  <li class="city"><a href="#">Chicago</a></li>
+                  <li class="city"><a href="/category/chicago/">Chicago</a></li>
                 </ol>
               </li>
-              <li class="state"><a href="#">Kentucky</a>
+              <li class="state"><a href="/category/kentucky/">Kentucky</a>
                 <ol>
-                  <li class="city"><a href="#">Lexington</a></li>
+                  <li class="city"><a href="/category/lexington/">Lexington</a></li>
                 </ol>
               </li>
-              <li class="state"><a href="#">Louisiana</a>
+              <li class="state"><a href="/category/louisiana/">Louisiana</a>
                 <ol>
-                  <li class="city"><a href="#">Lafayette</a></li>
-                  <li class="city"><a href="#">New Orleans</a></li>
+                  <li class="city"><a href="/category/lafayette/">Lafayette</a></li>
+                  <li class="city"><a href="/category/new-orleans/">New Orleans</a></li>
                 </ol>
               </li>
-              <li class="state"><a href="#">Michigan</a>
+              <li class="state"><a href="/category/michigan/">Michigan</a>
                 <ol>
-                  <li class="city"><a href="#">Ann Arbor</a></li>
+                  <li class="city"><a href="/category/ann-arbor/">Ann Arbor</a></li>
                 </ol>
               </li>
-              <li class="state"><a href="#">Tennessee</a>
+              <li class="state"><a href="/category/tennessee/">Tennessee</a>
                 <ol>
-                  <li class="city"><a href="#">Nashville</a></li>
-                  <li class="city"><a href="#">Memphis</a></li>
+                  <li class="city"><a href="/category/nashville/">Nashville</a></li>
+                  <li class="city"><a href="/category/memphis/">Memphis</a></li>
                 </ol>
               </li>
-              <li class="state"><a href="#">Texas</a>
+              <li class="state"><a href="/category/texas/">Texas</a>
                 <ol>
-                  <li class="city"><a href="#">Austin</a></li>
-                  <li class="city"><a href="#">Houston</a></li>
+                  <li class="city"><a href="/category/austin/">Austin</a></li>
+                  <li class="city"><a href="/category/houston/">Houston</a></li>
                 </ol>
               </li>
-              <li class="state"><a href="#">Wisconsin</a></li>
+              <li class="state"><a href="/category/wisconsin/">Wisconsin</a></li>
             </ol>
           </li>
         </ol>
