Give about, flight-path directories

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -7,9 +7,9 @@
 
     <div class="unit two-of-five main-nav">
       <div class="unit nav-grid home-nav"><a href="index.html">Home</a></div>
-      <div class="unit nav-grid home-nav even"><a href="about.html">About Us</a></div>
+      <div class="unit nav-grid home-nav even"><a href="about/">About Us</a></div>
       <div class="unit nav-grid home-nav nav-locations"><a href="locations.html">Locations</a></div>
-      <div class="unit nav-grid home-nav end even"><a href="flight-path.html">Flight Path</a></div>
+      <div class="unit nav-grid home-nav end even"><a href="flight-path/">Flight Path</a></div>
     </div>
   </nav>
 </header>
