--- a/_includes/_pagination.html
+++ b/_includes/_pagination.html
@@ -12,25 +12,25 @@
       <span>Previous</span>
     </p>
   {% endif %}
-  <ul class="pages">
-    <li class="page">
-      {% if paginator.page == 1 %}
-        <span class="current-page">1</span>
-      {% else %}
-        <a href="/">1</a>
-      {% endif %}
-    </li>
+  <!-- <ol class="pagination-group"> -->
+  <!--   <li> -->
+  <!--     {% if paginator.page == 1 %} -->
+  <!--       <span class="current-page">1</span> -->
+  <!--     {% else %} -->
+  <!--       <a href="/">1</a> -->
+  <!--     {% endif %} -->
+  <!--   </li> -->
 
-    {% for count in (2..paginator.total_pages) %}
-      <li class="page">
-        {% if count == paginator.page %}
-          <span class="current-page">{{ count }}</span>
-        {% else %}
-          <a href="/page{{ count }}">{{ count }}</a>
-        {% endif %}
-      </li>
-    {% endfor %}
-  </ul>
+  <!--   {% for count in (2..paginator.total_pages) %} -->
+  <!--     <li> -->
+  <!--       {% if count == paginator.page %} -->
+  <!--         <span class="current-page">{{ count }}</span> -->
+  <!--       {% else %} -->
+  <!--         <a href="/page{{ count }}">{{ count }}</a> -->
+  <!--       {% endif %} -->
+  <!--     </li> -->
+  <!--   {% endfor %} -->
+  <!-- </ol> -->
 
   {% if paginator.next_page %}
     <p class="next">
