List correct posts on index

--- a/_includes/_posts.html
+++ b/_includes/_posts.html
@@ -1,4 +1,4 @@
-{% for post in site.categories["kentucky"] %}
+{% for post in paginator.posts %}
   {% include _truncated_post.html  %}
 {% endfor %}
 
