--- a/_includes/_carousel.html
+++ b/_includes/_carousel.html
@@ -3,7 +3,7 @@
     <div class="grid-img">
       <ul class="rslides">
         {% for post in site.posts limit:5 %}
-          <li>
+          <li data-post-url="{{post.url}}" data-post-title="{{post.title}}">
             <img class="unit-img span-grid" src="{{post.featured_img}}"
              alt="{{post.featured_alt}}">
           </li>
@@ -15,7 +15,8 @@
     <div class="container">
       <div class="grid">
           <div class="post-title unit span-grid">
-            <h2>Wiki Wiki to Wisconsin</h2>
+            {% assign post = site.posts.first %}
+            <h2><a href="{{post.url}}">{{post.title}}</a></h2>
           </div>
       </div>
     </div>
