Link image to post, break out locations page

--- a/_includes/_posts.html
+++ b/_includes/_posts.html
@@ -1,5 +1,5 @@
 {% for post in paginator.posts %}
-  {% include _truncated_post.html  %}
+ {% include _truncated_post.html  %}
 {% endfor %}
 
 {% include _pagination.html %}
