--- a/_includes/_truncated_post.html
+++ b/_includes/_truncated_post.html
@@ -1,8 +1,10 @@
 <div class="thumbnail">
 <div class="container-img interior-img">
   <div class="grid-img">
-    <img class="unit-img span-grid" src="{{ post.featured_img }}"
-      alt="{{ post.featured_alt }}">
+    <a href="{{ post.url }}">
+      <img class="unit-img span-grid" src="{{ post.featured_img }}"
+        alt="{{ post.featured_alt }}">
+    </a>
   </div>
 </div>
 
