--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -8,7 +8,7 @@
     <div class="unit two-of-five main-nav">
       <div class="unit nav-grid home-nav"><a href="index.html">Home</a></div>
       <div class="unit nav-grid home-nav even"><a href="about/">About Us</a></div>
-      <div class="unit nav-grid home-nav nav-locations"><a href="locations.html">Locations</a></div>
+      <div class="unit nav-grid home-nav nav-locations"><a href="locations/">Locations</a></div>
       <div class="unit nav-grid home-nav end even"><a href="flight-path/">Flight Path</a></div>
     </div>
   </nav>
