--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -10,6 +10,9 @@
     {% endif %}
   </title>
 
+  <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="/favicon.ico" type="image/x-icon">
+
   <base href="{{site.baseurl}}">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/toast.css">
